<resources>
    <string name="app_name">SLZapp</string>
    <string name="quit_login">退出登陆</string>
    <string name="status1">已经找回</string>
    <string name="status2">追寻中</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sexm">男</string>
    <string name="sexf">女</string>
    <string name="address">广东机电职业技术学院</string>
    <string name="username">李时珍</string>
    <string name="phone">13715150202</string>
    <string name="oldkey">旧密码</string>
    <string name="newkey">新密码</string>
    <string name="cfkey">确认密码</string>
    <string name="enter">确认修改</string>
    <string name="info">没有人会选择孤立状况的整个世界，因为人是政治生物，他的本性要求与他一起生活。</string>
</resources>
