<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/updateuser"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pak_lup.slzapp.activity.updateuser"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.pak_lup.slzapp.view.XCRoundImageView
            android:id="@+id/roundImagetx"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/touxiang"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        </com.example.pak_lup.slzapp.view.XCRoundImageView>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#637B7B"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/user"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textSize="20dp"
            android:drawablePadding="40dp"/>
        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#637B7B"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="80dp">
            <RadioButton
                android:id="@+id/sexm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:checked="true"
                android:text="@string/sexm" />
            <RadioButton
                android:id="@+id/sexf"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sexf"/>

        </RadioGroup>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#637B7B"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/user"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="15dp"
            android:hint="@string/address"
            android:textSize="20dp"
            android:drawablePadding="40dp"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#637B7B"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/user"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:hint="@string/phone"
            android:textSize="20dp"
            android:drawablePadding="40dp"/>
        <EditText
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#637B7B"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/user"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:hint="@string/info"
            android:textSize="20dp"
            android:drawablePadding="40dp"/>
        <Button
            android:id="@+id/button1_userdata"
            android:text="@string/enter"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#FBF8FB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jianjie_userdata"
            android:background="@drawable/shape"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</LinearLayout>