<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upkey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pak_lup.slzapp.activity.upkey"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">>
        <EditText
            android:id="@+id/oldkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldkey"
            android:background="#637B7B"
            android:textColorHint="#FBF8FB"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/newkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newkey"
            android:background="#637B7B"
            android:textColorHint="#FBF8FB"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/cfkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cfkey"
            android:background="#637B7B"
            android:textColorHint="#FBF8FB"
            android:minHeight="50dp"
            android:paddingLeft="20dp"
            android:layout_marginBottom="30dp"/>
        <Button
            android:id="@+id/keyEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_below="@+id/editTextyzm"
            android:background="@drawable/shape"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FBF8FB"
            android:minHeight="40dp"/>
    </LinearLayout>

</LinearLayout>
